[gd_scene load_steps=2 format=3 uid="uid://bwiruao8f573s"]

[ext_resource type="Script" uid="uid://7cbscxh20sl6" path="res://scripts/SpawnerPanel.gd" id="1"]

[node name="SpawnerPanel" type="Control"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.1
anchor_top = 1.0
anchor_right = 0.9
anchor_bottom = 1.0

[node name="OrbitalDropButton" type="TextureButton" parent="HBoxContainer"]
modulate = Color(0.2, 0.6, 1, 1)
layout_mode = 2

[node name="EnergyGenButton" type="TextureButton" parent="HBoxContainer"]
modulate = Color(0.2, 0.8, 0.8, 1)
layout_mode = 2

[node name="ShieldGenButton" type="TextureButton" parent="HBoxContainer"]
modulate = Color(0.5, 0.8, 1, 1)
layout_mode = 2

[node name="TechLabButton" type="TextureButton" parent="HBoxContainer"]
modulate = Color(0.8, 0.8, 0.2, 1)
layout_mode = 2
